tests/semantic/pass/not_a_redefinition_of_function.c
int foo(int, int);
int foo(int i, int j);
int foo(int i, int k);
int main(void) {return foo(1,-1);}

int foo(int i, int j) {
  return i+j;
}
