tests/semantic/fail/dereferencing_integer.c
int main(void) {
  int i;
  return i->a;
}
